--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport"content="width=device-width">
-	<title>Barbearia Alura</title> 
+	<title>Barbearia Alura github</title> 
 
 	<link rel="stylesheet" href="reset.css">
 	<link reL= "stylesheet" href="style.css">
